--- a/MAIA/test-output/old/Default suite/methods-alphabetical.html
+++ b/MAIA/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5b8a8">  <td>22/09/13 11:51:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="cekFormy.testFormy()[pri:0, instance:latihan.seleniumlat.cekFormy@4a883b15]">testFormy</td> 
+<tr bgcolor="939c60">  <td>22/09/15 05:16:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dropdown.setUp()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="939c60">  <td>22/09/15 05:16:57</td>   <td>5793</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dropdown.tearDown()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="939c60">  <td>22/09/15 05:16:54</td>   <td>2803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Dropdown.testDropdown()[pri:0, instance:tugas.selenium.formy.Dropdown@449a4f23]">testDropdown</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
