--- a/MAIA/test-output/old/Default suite/methods.html
+++ b/MAIA/test-output/old/Default suite/methods.html
@@ -1,10 +1,60 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa2f7">  <td>22/09/16 23:51:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PracticeFormPageTest.pageObject()[pri:0, instance:tugas.selenium.demoqa.PracticeFormPageTest@8f2ef19]">&gt;&gt;pageObject</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>22/09/16 23:51:24</td>   <td>8820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PracticeFormPageTest.testPracticeForm()[pri:0, instance:tugas.selenium.demoqa.PracticeFormPageTest@8f2ef19]">testPracticeForm</td> 
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
   <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="9aa2f7">  <td>22/09/16 23:51:36</td>   <td>20979</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PracticeFormPageTest.closeBrowser()[pri:0, instance:tugas.selenium.demoqa.PracticeFormPageTest@8f2ef19]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:50</td>   <td>-8598</td> <td>&nbsp;</td><td title="&gt;&gt;ByCityNameCountryCode.befTest()[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">&gt;&gt;befTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>22/09/17 07:57:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ByCityNameCountryCode.testGet(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:ujian.ujiankeempat.ByCityNameCountryCode@58cbafc2]">testGet</td> 
+  <td>main@1556956098</td>   <td></td> </tr>
 </table>
