--- a/MAIA/test-output/old/Default suite/classes.html
+++ b/MAIA/test-output/old/Default suite/classes.html
@@ -4,14 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tugas.selenium.demoqa.PracticeFormPageTest</td>
+<td>ujian.ujiankeempat.nopcommerce.NopCommerceLoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testPracticeForm</td>
+<td>loginLogout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFormLoginComm</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>customerClick</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginFail</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFormLoginRememberMe</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
